--- a/index.html
+++ b/index.html
@@ -4,6 +4,51 @@
     <meta charset="UTF-8">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
 </head>
-<body></body>
+<body>
+    <div class="section1">
+   <div class="top"><div class="header-left">
+        Header Logo
+        </div>
+        <div class="header-links">
+        <ul>
+            <div><li><href="#">header link one <!--(linked in page)--> </a></li></div>
+            <div><li><href="#">header link two <!--(instagram page)--> </a></li></div>
+            <div><li><href="#">header link three <!--(portfolio page)--> </a></li></div>
+        </ul>
+    </div></div>
+
+       <div class="bottom1"><div class="main-left"><div class="title">This website is awesome</div>
+            <div class="subtext">This website has some subtext that goes here under the main title it's a smaller font and the color is lower contrast</div>
+            <div class="button1"><button>Sign up</button></div></div>
+        <div class="right"><span class="main-photo"> <img src="./images/IMG_5772.jpg" alt="Berlin" height="220" width="500">
+    </div></div></div></div></div></div>
+
+    <div class="secondary-section">
+        <div class="top">Some random information.</div>
+        <div class="bottom">
+            <img src="./images/burritos.jpg" alt="random photo 1" height="300" width="350">
+            <h2>subtext</h2>
+            <img src="./images/burritos.jpg" alt="random photo 2" height="300" width="350">
+            <h2>subtext</h2>
+            <img src="./images/burritos.jpg" alt="random photo 3" height="300" width="350">
+            <h2>subtext</h2>
+            <img src="./images/burritos.jpg" alt="random photo 4" height="300" width="350">
+            <h2>subtext</h2>
+        </div>
+        <div class="quote-section">
+          <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually ready it. Who knows? All I know is that it looks nice.</div>
+          <div class="artist">-Thor, God of Thunder</div>
+        </div>
+        <div class="call-to-action">
+            <div class="top">Call to action! It's time!</div>
+            <div class="bottom">Sign up for our products by clicking that button right over there!</div>
+            <button>Sign up</button>
+        </div>
+    <div class="footer">
+        Copyright &#169; The Odin Project 2021
+    </div>
+</body>
 </html>
