complete the landing page

--- a/index.html
+++ b/index.html
@@ -20,33 +20,47 @@
         </ul>
     </div></div>
 
-       <div class="bottom1"><div class="main-left"><div class="title">This website is awesome</div>
+       <div class="bottom1"><div class="main-left"><div class="main-title">This website is awesome</div>
             <div class="subtext">This website has some subtext that goes here under the main title it's a smaller font and the color is lower contrast</div>
             <div class="button1"><button>Sign up</button></div></div>
         <div class="right"><span class="main-photo"> <img src="./images/IMG_5772.jpg" alt="Berlin" height="220" width="500">
     </div></div></div></div></div></div>
 
     <div class="secondary-section">
-        <div class="top">Some random information.</div>
-        <div class="bottom">
-            <img src="./images/burritos.jpg" alt="random photo 1" height="300" width="350">
-            <h2>subtext</h2>
-            <img src="./images/burritos.jpg" alt="random photo 2" height="300" width="350">
-            <h2>subtext</h2>
-            <img src="./images/burritos.jpg" alt="random photo 3" height="300" width="350">
-            <h2>subtext</h2>
-            <img src="./images/burritos.jpg" alt="random photo 4" height="300" width="350">
-            <h2>subtext</h2>
-        </div>
-        <div class="quote-section">
+       <div class="first-main-container"><div class="title1">Some random information.</div>
+        <div class="container">
+
+            <div class="info">
+                <img src="./images/IMG_7760.jpg" alt="vietnamese coffee" height="200" width="200"></div>
+
+            <div class="info">
+                <img src="./images/IMG_5305.jpg" alt="finale of the purple disco machine show at red rocks" height="200" width="200"></div>
+
+            <div class="info">
+                <img src="./images/IMG_6015.jpeg" alt="daft punk vinyl discovery album" height="200" width="200"></div>
+ 
+                
+            <div class="info">
+                <img src="./images/IMG_7759.jpg" alt="poke bowl with shrimp tempura and veggies" height="200" width="200"></div></div>
+
+            <div class="container-two">
+                <div class="text">This is a vietnamese coffee. We love this one.</div>
+                <div class="text">This is a show at red rocks. Isn't it nice?</div>
+                <div class="text">We love music. Yay music.</div>
+                <div class="text">I'm running out of things to say about our favorite things.</div>
+            </div></div>
+
+        <div class="quote-section"><div class="quote-parent">
           <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually ready it. Who knows? All I know is that it looks nice.</div>
-          <div class="artist">-Thor, God of Thunder</div>
-        </div>
-        <div class="call-to-action">
-            <div class="top">Call to action! It's time!</div>
-            <div class="bottom">Sign up for our products by clicking that button right over there!</div>
-            <button>Sign up</button>
-        </div>
+        </div></div>
+        <div class="artist">-Thor, God of Thunder</div>
+    
+            <div class="main-container"> <div class="container-three">
+            <div class="parent-bottom">
+           <div class="container-four"><div class="top-two">Call to action! It's time!</div>
+            <div class="bottom-two">Sign up for our products by clicking that button right over there!</div></div>
+            <div class="button-two"><button>Sign up</button></div>
+        </div></div></div>
     <div class="footer">
         Copyright &#169; The Odin Project 2021
     </div>
